# p-list

./: README.md  pyproject.toml
src/: app.py  client.py  core.py  storage.py
