[tool.poetry]
name = "p-list"
version = "0.0.0.1"
description = "common information about purchase list application"
authors = ["Rostyslav Pudlo <rostyslav.pudlo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.125.0"
websockets = "^12.0"
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
